# dwh_budilder

./: .dockerignore  .env  .gitignore  Dockerfile  api_data.txt  build-windows.bat  company_ids.json  main.py  pyproject.toml  request_main.py
api/: __init__.py  api_client.py
api_file/: KEY.doc  api_data.txt  api_response.txt  reports.json  公司部门.txt  报账单.txt  报账单log.txt  报账单详情.txt  报账单详情返回数据.txt  流水管理.txt
common/: config.py  decorators.py
common/sql/: check_table.sql
core/: automate_chrome.py  boe_crawler.py  data_processor.py  flow_crawler.py  monitor_service.py  org_crawler.py  startup_manager.py  system_manager.py  task_manager.py
database/: database_manager.py
test/: api_test.py  test_data_cleaner.py  test_decorators.py  test_financial_reports.py  test_monitor_demo.py
utils/: __init__.py  automate_chrome.py  data_cleaner.py  generate_period_code.py  monitor.py
utils/rpm/: libobclient-2.2.11-42025062010.el7.x86_64.rpm
