[project]
name = "dwh-budilder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fake-useragent>=2.2.0",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
]
