[project]
name = "dwh-budilder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fake-useragent>=2.2.0",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
]
[tool.pip]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
trusted-host = "mirrors.aliyun.com"

[[tool.pip.extra-index-url]]
url = "https://pypi.org/simple/"