[project]
name = "dwh-budilder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fake-useragent>=2.2.0",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pypdf>=6.0.0",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "sqlalchemy>=2.0.43",
    "webdriver-manager>=4.0.2",
]
[tool.pip]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
trusted-host = "mirrors.aliyun.com"

[[tool.pip.extra-index-url]]
url = "https://pypi.org/simple/"
